# flask_edu_project

./: .gitignore  README.md  app.py  pyproject.toml
rest/clicker/: crud.py  views.py
rest/examples/: views.py
rest/index/: __init__.py  views.py
rest/products/: crud.py  forms.py  views.py
static/css/: loading.css
templates/: base.html  index.html
templates/clicker/: index.html
templates/clicker/components/: click_count.html  clicker_body.html
templates/components/: footer.html  loading-animation.html
templates/examples/: footer.html  index.html
templates/examples/components/: footer.html
templates/examples/hover/: show_hover.html
templates/examples/ping/: show_ping.html
templates/macros/: errors-list.html
templates/products/: base.html  details.html  list.html
templates/products/components/: delete-button-details.html  delete-button.html  form-body.html  form-update.html  form.html  item.html  items-list-reveal.html  items-list-single-page.html  items-list.html  only-items-reveal.html  only-items.html
utils/: helpers.py
