[tool.poetry]
name = "flask-test-project"
version = "0.1.0"
description = ""
authors = ["Segoletca <sergey.noskov.2001@mail.ru>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
